review dom_exam - add Array.from()

--- a/examweb/src/main/webapp/hw/domExam.html
+++ b/examweb/src/main/webapp/hw/domExam.html
@@ -28,6 +28,11 @@
 			newP.removeChild(newP.lastChild);
 		};
 		
+		/* let del = Array.from(newP.children);
+		
+		del.forEach((child) => {
+			newP.removeChild(child);
+		}); */
 		/* let del = [...newP.children];
 		
 		del.forEach((child) => {
